Python.txt
PS C:\Users\C356882\Desktop\mouse> & "C:/Program Files/Python313/python.exe" c:/Users/C356882/Desktop/mouse/mouseOffice.pyw
  File "c:\Users\C356882\Desktop\mouse\mouseOffice.pyw", line 83
    time_left = (datetime.combine(datetime.today(), automator.start_time) - datetime.now()
                ^
SyntaxError: '(' was never closed
PS C:\Users\C356882\Desktop\mouse> 